fix: no overflow and height of mobile floater

--- a/src/styles/includes/_jobs-page.scss
+++ b/src/styles/includes/_jobs-page.scss
@@ -65,7 +65,7 @@ $filter-bar-height--desktop: 11.8rem;
 			top: 90vh;
 			text-align: right;
 			max-width: 100%;
-			overflow: visible;
+			overflow: hidden;
 			z-index: 100;
 
 			.toggle-button {
